--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "homepage": "https://github.com/fer-nando-machado/node-transactions#readme",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.8",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   }
 }
