--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.8",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
