--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/api/index.ts",
+    "queue:worker": "ts-node src/queue/worker.ts",
+    "queue:producer": "ts-node src/queue/producer.ts",
     "build": "tsc",
     "test": "jest",
     "docker:start": "npm run docker:build && npm run docker:run",
@@ -27,17 +29,19 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "bull": "^4.15.1",
     "express": "^4.19.2",
-    "supertest": "^7.0.0"
+    "ioredis": "^5.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.10",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.3",
+    "supertest": "^7.0.0"
   }
 }
