--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "ts-node src/api/index.ts",
     "queue:consumer": "ts-node src/queue/consumer.ts",
     "queue:producer": "ts-node src/queue/producer.ts",
+    "migrate": "npx knex migrate:latest --knexfile src/data/knexfile.ts",
+    "migrate:rollback": "npx knex migrate:rollback --knexfile src/data/knexfile.ts",
     "build": "tsc",
     "test": "jest",
     "docker:start": "npm run docker:build && npm run docker:run",
@@ -30,8 +32,12 @@
   },
   "dependencies": {
     "bull": "^4.15.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "ioredis": "^5.4.1"
+    "ioredis": "^5.4.1",
+    "knex": "^3.1.0",
+    "pg": "^8.12.0",
+    "pg-promise": "^11.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -39,9 +45,9 @@
     "@types/node": "^20.14.10",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "supertest": "^7.0.0"
+    "typescript": "^5.5.3"
   }
 }
