--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/api/index.ts",
-    "queue:consumer": "ts-node src/queue/consumer.ts",
-    "queue:producer": "ts-node src/queue/producer.ts",
+    "queue:consumer": "ts-node src/queue/processor/consumer.ts",
+    "queue:producer": "ts-node src/queue/processor/producer.ts",
     "migrate": "npx knex migrate:latest --knexfile src/data/knexfile.ts",
     "migrate:rollback": "npx knex migrate:rollback --knexfile src/data/knexfile.ts",
     "build": "tsc",
